--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "firebase-admin": "^11.0.1",
     "firebase-functions": "^3.13.0",
     "history": "^4.9.0",
+    "i18next": "^21.9.1",
+    "i18next-browser-languagedetector": "^6.1.5",
     "jarallax": "^1.12.1",
     "leaflet": "^1.6.0",
     "next": "^12.2.5",
@@ -55,6 +57,7 @@
     "react-dom": "^18.2.0",
     "react-ga": "^3.3.1",
     "react-helmet": "^6.1.0",
+    "react-i18next": "^11.18.5",
     "react-lazy-load-image-component": "^1.5.5",
     "react-leaflet": "^4.0.2",
     "react-material-ui-carousel": "^3.4.2",
