--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     ]
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@material-ui/core": "^4.2.1",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/lab": "^4.0.0-alpha.39",
@@ -63,6 +64,7 @@
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "react-social-media-embed": "^2.2.2",
     "react-typed": "^1.2.0",
     "react-visibility-sensor": "^5.1.1",
     "sass": "^1.54.6",
