--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "u-shop-bkk",
+  "name": "banh-mi-nem",
   "version": "1.0.0",
   "main": "function.js",
   "private": true,
@@ -41,7 +41,7 @@
     "clsx": "^1.0.4",
     "firebase": "^8.2.1",
     "firebase-admin": "^11.0.1",
-    "firebase-functions": "^3.13.0",
+    "firebase-functions": "^4.0.1",
     "history": "^4.9.0",
     "i18next": "^21.9.1",
     "i18next-browser-languagedetector": "^6.1.5",
