--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -12,9 +12,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: npm install --force && npm run build
-      - uses: FirebaseExtended/action-hosting-deploy@v0
-        with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_BANH_MI_NEM }}'
-          channelId: live
-          projectId: banh-mi-nem
+      - run: npm install -g firebase-tools # install firebase-cli
+      - run: firebase use --token 1//0gGuiqRtP7D4BCgYIARAAGBASNwF-L9Irh_1U-xYhPdXRJbetOk6RUrHtXL6E_VyJAG1N1OSbwWHk0tWAuwuMw9xPBeGReGLcSt0 # set firebase token
+      - run: firebase use --add banh-mi-nem # set current project
+      - run: firebase deploy --only functions:nextServer,hosting --token 1//0gGuiqRtP7D4BCgYIARAAGBASNwF-L9Irh_1U-xYhPdXRJbetOk6RUrHtXL6E_VyJAG1N1OSbwWHk0tWAuwuMw9xPBeGReGLcSt0 # deploy project
+      
