--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-countup": "^6.3.0",
     "react-dom": "^18.2.0",
     "react-ga": "^3.3.1",
+    "react-ga4": "^1.4.1",
     "react-helmet": "^6.1.0",
     "react-i18next": "^11.18.5",
     "react-lazy-load-image-component": "^1.5.5",
