--- a/package.json
+++ b/package.json
@@ -30,19 +30,20 @@
     ]
   },
   "dependencies": {
-    "@fortawesome/free-solid-svg-icons": "~6.5.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/free-solid-svg-icons": "~6.5.1",
     "@mui/icons-material": "^5.14.19",
     "@mui/lab": "^5.0.0-alpha.155",
     "@mui/material": "^5.14.20",
     "@mui/styles": "^5.14.20",
+    "@vip30/react-social-media-embed": "^2.3.6",
     "aos": "~2.3.4",
     "axios": "~1.6.2",
     "clsx": "~2.0.0",
     "firebase": "~8.2.1",
     "firebase-admin": "~11.0.1",
-    "firebase-functions": "~4.0.1",
+    "firebase-functions": "^4.5.0",
     "history": "~5.3.0",
     "i18next": "~23.7.7",
     "i18next-browser-languagedetector": "~7.2.0",
@@ -70,8 +71,7 @@
     "sass": "~1.69.5",
     "start": "~5.1.0",
     "swiper": "~11.0.5",
-    "validate.js": "~0.13.1",
-    "@vip30/react-social-media-embed": "^2.3.6" 
+    "validate.js": "~0.13.1"
   },
   "devDependencies": {
     "@types/aos": "~3.0.7",
