--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@mui/lab": "^5.0.0-alpha.155",
     "@mui/material": "^5.14.20",
     "@mui/styles": "^5.14.20",
+    "@react-pdf-viewer/core": "^3.12.0",
     "@vip30/react-social-media-embed": "^2.3.6",
     "aos": "~2.3.4",
     "axios": "~1.6.2",
@@ -64,6 +65,7 @@
     "react-lazy-load-image-component": "~1.6.0",
     "react-leaflet": "~4.2.1",
     "react-material-ui-carousel": "~3.4.2",
+    "react-pdf": "^7.6.0",
     "react-router-dom": "~6.20.1",
     "react-scripts": "~5.0.1",
     "react-typed": "~1.2.0",
