--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react": "~18.2.0",
     "react-countup": "~6.5.0",
     "react-dom": "~18.2.0",
+    "react-fb-image-grid": "^0.1.5",
     "react-ga": "~3.3.1",
     "react-ga4": "~2.1.0",
     "react-helmet": "~6.1.0",
