--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-pdf": "^7.6.0",
     "react-router-dom": "~6.20.1",
     "react-scripts": "~5.0.1",
+    "react-tabs": "^6.0.2",
     "react-typed": "~1.2.0",
     "react-visibility-sensor": "~5.1.1",
     "sass": "~1.69.5",
